2006-08-30 Joerg Wunsch <j@uriah.heep.sax.de>

	Rewrite the serbb code so the pin numbering matches the
	DB9 connector, and fix some related bugs in serbb_posix.c.
	Closes bug #16265: dasa2 does not work under posix
	* avrdude.conf.in: New serbb pin numbering; added "siprog"
	as an alias for "ponyser".
	* serbb_posix.c: New pin numbering, fix some confusion.
	* serbb_win32.c: New pin numbering.
	The generic and Posix-related parts of these changes have
	been contributed by Hanns-Konrad Unger
	
2006-08-30 Joerg Wunsch <j@uriah.heep.sax.de>

	Contributed by the anonymous developer of patch #5096:
	* avrdude.conf.in (blaster): Add an entry for the Altera
	byteblaster.

2006-08-30 Joerg Wunsch <j@uriah.heep.sax.de>

	Rework the exit specs so they actually work again.  It should be
	possible to extend them for other programmers than PPI now (serbb,
	stk500*).
	* pgm.h: Keep the exit specs in an abstract form inside struct
	programmer_t.  (Should be moved out into some programmer-specific
	structure.)  Rename the getexitspecs() method into
	parseexitspecs().
	* main.c: Move the exit specs stuff out to the programmer
	implementation.
	* par.c: Implement the new exit spec handling.  Everything is now
	done using the generic abstraction layer.
	Closes bug #16443: No disable Resetsignal at the end of
	Programming Session
	Obviates need for patch #5057: quick and dirty Hack to unset Reset
	after Programming

2006-08-29 Joerg Wunsch <j@uriah.heep.sax.de>

	This patch has been contributed by an anonymous developer
	via the patch tracking system.
	patch #5096: Allow VCC and BUFF to be any pin in parallel mode
	* config_gram.y: Release the restriction to PPIDATA pins.
	* par.c: Rework the code to introduce a function par_setmany()
	that builds on top of par_setpin(), and use that function for the
	PPI_AVR_VCC and PPI_AVR_BUFF pin collections.  This also abstracts
	the polarity of these signals appropriately.

2006-08-28 Joerg Wunsch <j@uriah.heep.sax.de>
